--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Portafolio de Proyectos de Juan Jurado 2022" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <script
-      src="https://kit.fontawesome.com/c38ce6f3a5.js"
-      crossorigin="anonymous"
-    ></script>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <style>
-      *::-webkit-scrollbar{
-        width: 0
-      }
-    </style>
+  <script src="https://kit.fontawesome.com/c38ce6f3a5.js" crossorigin="anonymous"></script>
 
-    <title>Juan Jurado</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <style>
+    *::-webkit-scrollbar {
+      width: 0;
+    }
+  </style>
+
+  <title>Juan Jurado - Portafolio</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
